--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
     <script src="./script.js"></script>
 
@@ -16,7 +19,7 @@
         </div>
         <div class="weather">
             <h2 class="city">Weather in New Albany</h2>
-            <div class="temp">20°C</div>
+            <h1 class="temp">20°C</h1>
             <img src="" alt="" class="icon" />
             <div class="description">Cloudy</div>
             <div class="humidity">Humidity: 10%</div>
