--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
         <div class="weather">
             <h2 class="city">Weather in New Albany</h2>
             <h1 class="temp">20°C</h1>
-            <img src="" alt="" class="icon" />
+            <div class="flex">
             <div class="description">Cloudy</div>
+            <img src="" alt="" class="icon" />
+        </div>
             <div class="humidity">Humidity: 10%</div>
             <div class="wind">Wind speed: 3.6 km/h</div>
         </div>
