--- a/index.html
+++ b/index.html
@@ -14,18 +14,21 @@
 <body>
     <div class="card">
         <div class="search">
-            <input type="text" class="search-bar" id="autocomplete" placeholder="Select a city"></input><ul id="results"></ul>
             <button><svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24" height="1.5em" width="1.5em" xmlns="http://www.w3.org/2000/svg"><g><path fill="none" d="M0 0h24v24H0z"></path><path d="M18.031 16.617l4.283 4.282-1.415 1.415-4.282-4.283A8.96 8.96 0 0 1 11 20c-4.968 0-9-4.032-9-9s4.032-9 9-9 9 4.032 9 9a8.96 8.96 0 0 1-1.969 5.617zm-2.006-.742A6.977 6.977 0 0 0 18 11c0-3.868-3.133-7-7-7-3.868 0-7 3.132-7 7 0 3.867 3.132 7 7 7a6.977 6.977 0 0 0 4.875-1.975l.15-.15zm-3.847-8.699a2 2 0 1 0 2.646 2.646 4 4 0 1 1-2.646-2.646z"></path></g></svg></button>
+            <input type="text" class="search-bar" id="autocomplete" placeholder="Select a city"></input>
+        </div>
+        <div class="results">
+            <ul id="results" style="display: flex;list-style: none;padding-left: 120px;"></ul>
         </div>
         <div class="weather loading">
             <h2 class="city">Weather in New Albany</h2>
-            <h1 class="temp">33°C</h1>
+            <h1 class="temp">33°F</h1>
             <div class="flex">
             <div class="description">Cloudy</div>
             <img src="" alt="" class="icon" />
         </div>
             <div class="humidity">Humidity: 13%</div>
-            <div class="wind">Wind speed: 66.6 km/h</div>
+            <div class="wind">Wind speed: 66.6 miles/hr</div>
         </div>
     </div>
 </body>
